--- a/index.ipynb
+++ b/index.ipynb
@@ -70,6 +70,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "top_travel_"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
