--- a/index.ipynb
+++ b/index.ipynb
@@ -175,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "italy =# 'Italy'"
+    "italy = 'Italy' # 'Italy'"
    ]
   },
   {
