--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries[4\n",
+    "    ]"
+   ]
   },
   {
    "cell_type": "code",
