--- a/index.ipynb
+++ b/index.ipynb
@@ -284,12 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'USA'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries[4\n",
-    "    ]"
+    "countries[4]\n"
    ]
   },
   {
