Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico "
+    "mexico b"
    ]
   },
   {
@@ -319,6 +319,13 @@
    "source": [
     "Notice that the second through fifth elements are all in a row and all in the Western Hemisphere.  Assign that subset of elements to a variable called `kindof_neighbors`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
