Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,16 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico b"
+    "mexico "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries[3]"
    ]
   },
   {
