Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,17 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico = \"\""
+    "mexico = \"Mexico\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
