--- a/index.ipynb
+++ b/index.ipynb
@@ -354,7 +354,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries"
+   ]
   },
   {
    "cell_type": "code",
