--- a/index.ipynb
+++ b/index.ipynb
@@ -351,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico']"
+       "['USA', 'Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors"
+    "kindof_neighbors = "
    ]
   },
   {
