Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,12 +371,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
     "kindof_neighbors = countries[1:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kindof_ne"
    ]
   },
   {
