--- a/index.ipynb
+++ b/index.ipynb
@@ -415,12 +415,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "None # add code here\n",
-    "coun"
+    "countries.append('Malta')"
    ]
   },
   {
