Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -594,7 +594,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here"
+    "countries = None # add code here\n",
+    "'New '"
    ]
   },
   {
