Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -590,13 +590,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-32-31baa525f9f2>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-31baa525f9f2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'New Mexico' = 'USA'\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = None # add code here\n",
+    "'New Mexico' = 'USA'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "countries = None # add code here\n",
-    "'New '"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
