Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -631,6 +631,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "countries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "countries \n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland', \n",
     "# 'Argentina', 'Italy',  'Canada', 'South Korea',  'Malta',  'Thailand']"
