Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -719,6 +719,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
